--- a/public/css/counter.css
+++ b/public/css/counter.css
@@ -1,4 +1,5 @@
 .cdc-counter-wrapper { text-align:center; margin-bottom:1rem; }
+.cdc-counter-title { font-weight:600; margin-bottom:0.25rem; }
 .cdc-counter {
     letter-spacing: 2px;
     font-size: 1em;
