--- a/public/css/counter.css
+++ b/public/css/counter.css
@@ -36,6 +36,11 @@
     font-size: 1em;
 }
 
+.cdc-counter-info {
+    opacity: 0;
+    transition: opacity 0.4s ease;
+}
+
 /* Hide reCAPTCHA badge while retaining compliance via inline notice */
 .grecaptcha-badge {
     visibility: hidden;
